Replace usage of deprecated method